# rosbag-browser

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
app/: __init__.py  cli.py  config.py  db.py  docker_entrypoint.py  indexer.py  main.py  merger.py  models.py  repository.py
app/routes/: bags.py  scan.py
app/static/: style.css
app/templates/: bag_detail.html  bags.html  base.html  scan.html  scan_modal.html
tests/: test_docker_entrypoint.py  test_indexer.py  test_merger.py  test_repository.py  test_routes.py
