[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rosbag-browser"
version = "0.1.0"
description = "A lightweight ROS 2 bag browser for bag archives."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "jinja2>=3.1,<4.0",
  "python-multipart>=0.0.9,<1.0",
  "pyyaml>=6.0,<7.0",
  "tzdata>=2024.1",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.scripts]
rosbag-browser = "app.cli:main"

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
